--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(Spindle CXX C)
 
 find_package(LLVM REQUIRED CONFIG)
 
-list(APPEND CMAKE_MODULE_PATH "${LLVM_CMAKE_DIR}")
+list(APPEND CMAKE_MODULE_PATH cmake ${LLVM_CMAKE_DIR})
 include(AddLLVM)
 
 add_definitions(${LLVM_DEFINITIONS})
@@ -11,25 +11,22 @@ include_directories(${LLVM_INCLUDE_DIRS})
 link_directories(${LLVM_LIBRARY_DIRS})
 separate_arguments(LLVM_DEFINITIONS_LIST NATIVE_COMMAND ${LLVM_DEFINITIONS})
 
-set(CMAKE_C_STANDARD 17)
-set(CMAKE_C_STANDARD_REQUIRED ON)
-set(CMAKE_C_EXTENSIONS OFF)
-set(CMAKE_CXX_STANDARD 20)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(CMAKE_CXX_EXTENSIONS OFF)
+include(fmt)
+
+include(common)
 
 if (NOT LLVM_ENABLE_RTTI)
-	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-rtti")
+	set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} -fno-rtti)
 endif ()
 
 add_llvm_pass_plugin(Spindle spindle/entry.cpp)
-target_link_libraries(Spindle PRIVATE "$<$<PLATFORM_ID:Darwin>:-undefined dynamic_lookup>")
-
 target_include_directories(Spindle PRIVATE
 	include
 
 	detector
 	tracer
 )
+target_link_libraries(Spindle PRIVATE fmt::fmt-header-only)
+target_link_libraries(Spindle PRIVATE $<$<PLATFORM_ID:Darwin>:-undefined dynamic_lookup>)
 
 add_subdirectory(SpindlePass)
