--- a/SpindlePass/CMakeLists.txt
+++ b/SpindlePass/CMakeLists.txt
@@ -7,7 +7,8 @@ target_include_directories(SpindlePass PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}")
 # LLVM is (typically) built with no C++ RTTI. We need to match that;
 # otherwise, we'll get linker errors about missing RTTI data.
 set_target_properties(SpindlePass PROPERTIES
-    COMPILE_FLAGS "-fno-rtti"
+    # COMPILE_FLAGS "-fno-rtti"
+    COMPILE_FLAGS "-frtti"
 )
 
 # Get proper shared-library behavior (where symbols are not necessarily
