--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Created by https://www.toptal.com/developers/gitignore/api/macOS,Linux,Windows,C,C++,CMake
 # Edit at https://www.toptal.com/developers/gitignore?templates=macOS,Linux,Windows,C,C++,CMake
 
+tmp.txt
+
 # *.ll
 examples/*.ll
 
